# home-secure-device

./: .gitignore
hub_firmware/glazia_hub/: .clangd  .cproject  .project  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old
hub_firmware/glazia_hub/main/: CMakeLists.txt  api_client.c  api_client.h  aqi_sensor.c  ble.c  button.c  button.h  display.c  display.h  espnow.c  espnow.h  fingerprint.c  fingerprint.h  hub_control_ws.c  hub_sensor.c  hub_sensor.h  idf_component.yml  main.c  nvs_storage.c  nvs_storage.h  state.h  websocket.c  wifi.c  wifi.h
hub_firmware/glazia_hub/main/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.h  ui.c  ui.h  ui_image_about.c  ui_image_back.c  ui_image_cloud.c  ui_image_date.c  ui_image_finger.c  ui_image_fs_img.c  ui_image_fwd.c  ui_image_green.c  ui_image_hub_home.c  ui_image_hum_img.c  ui_image_loc.c  ui_image_logo_hub.c  ui_image_nodes.c  ui_image_red.c  ui_image_sensor.c  ui_image_settings.c  ui_image_temp_img.c  ui_image_tick.c
hub_firmware/tft_c6/: partitions.csv  sdkconfig  sdkconfig.defaults
hub_firmware/tft_c6/main/: CMakeLists.txt  idf_component.yml  tft_test.c
hub_firmware/tft_s3/: CMakeLists.txt  partitions.csv
hub_firmware/tft_s3/main/: CMakeLists.txt  idf_component.yml  tft_test.c
sensor_firmware/glazia_sensor/: .clangd  .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
sensor_firmware/glazia_sensor/main/: CMakeLists.txt  (+1 more)
ui/: .eez-project-build  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h
(+3 files in other folders)
